[package]
name = "libmdns"
version = "0.3.1"
authors = ["Casey Robinson <casey@rampantmonkey.com>"]

description = "rust mdns library"
repository = "https://github.com/rampantmonkey/libmdns"
readme = "README.md"
license = "MIT"

[dependencies]
byteorder = "1.2"
futures = "0.1"
libc = "0.2"
log = "0.4"
multimap = "0.4"
net2 = "0.2"
nix = "0.9"
rand = "0.6"
tokio = "0.1"
quick-error = "1.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
socket2 = "0.2.2"

[dev-dependencies]
env_logger = "0.5"
